add SignalR hub that publishes random values

--- a/WebDashboard/index.html
+++ b/WebDashboard/index.html
@@ -1,7 +1,25 @@
+<!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <div></div>
-    </body>
+<head>
+    <title></title>
+	<meta charset="utf-8" />
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js"></script>
+    <script src="/signalr/hubs"></script>
+</head>
+<body>
+    <div>temperature: <span id="temperature">none</span> degrees</div>
+    <script type="text/javascript">
+        var hub = $.connection.deviceHub;
+
+        hub.client.publishTemperature = function(sensorsJson){
+            var sensors = JSON.parse(sensorsJson);
+            $("#temperature").html(sensors.temperature);
+        };
+        
+        $.connection.hub.logging = true;
+        $.connection.hub.start();
+    </script>
+</body>
 </html>
